--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,8 @@
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.3.0",
+    "semantic-ui-react": "^0.78.3",
     "style-loader": "0.19.0",
     "styled-jsx": "^2.2.5",
     "styled-jsx-plugin-sass": "^0.2.3",
